@@ -22,13 +22,16 @@ import com.github.javydreamercsw.management.domain.npc.Npc;
 import com.github.javydreamercsw.management.domain.show.segment.Segment;
 import com.github.javydreamercsw.management.domain.show.segment.rule.SegmentRule;
 import com.github.javydreamercsw.management.domain.show.segment.type.SegmentType;
+import com.github.javydreamercsw.management.domain.team.Team;
 import com.github.javydreamercsw.management.domain.title.Title;
 import com.github.javydreamercsw.management.domain.wrestler.Wrestler;
 import com.github.javydreamercsw.management.domain.wrestler.WrestlerState;
 import com.github.javydreamercsw.management.service.expansion.ExpansionService;
+import com.github.javydreamercsw.management.service.npc.NpcService;
 import com.github.javydreamercsw.management.service.segment.SegmentRuleService;
 import com.github.javydreamercsw.management.service.segment.type.SegmentTypeService;
 import com.github.javydreamercsw.management.service.show.planning.ProposedSegment;
+import com.github.javydreamercsw.management.service.team.TeamService;
 import com.github.javydreamercsw.management.service.title.TitleService;
 import com.github.javydreamercsw.management.service.wrestler.WrestlerService;
 import com.vaadin.flow.component.button.Button;
@@ -72,15 +75,17 @@ public class EditSegmentDialog extends Dialog {
       List<Title> titles,
       List<Wrestler> activeWrestlers,
       Map<String, Wrestler> wrestlerByName,
-      Map<String, String> expansionNames) {
+      Map<String, String> expansionNames,
+      List<Team> teams) {
 
     public static PreloadedData load(
         final SegmentTypeService segmentTypeService,
         final SegmentRuleService segmentRuleService,
-        final com.github.javydreamercsw.management.service.npc.NpcService npcService,
+        final NpcService npcService,
         final TitleService titleService,
         final WrestlerService wrestlerService,
         final ExpansionService expansionService,
+        final TeamService teamService,
         final Long universeId) {
       // Collect enabled codes via ExpansionService (thread-safe, no Vaadin session needed).
       // The universe-context-aware findAll() overload is unreliable in async threads because
@@ -119,6 +124,8 @@ public class EditSegmentDialog extends Dialog {
               "[DEBUG-ATW8djt] PreloadedData.load() result — {} segmentTypes, {} segmentRules",
               segmentTypes.size(),
               segmentRules.size());
+      List<Team> teams =
+          teamService != null ? teamService.getActiveTeams() : java.util.Collections.emptyList();
       return new PreloadedData(
           segmentTypes,
           segmentRules,
@@ -128,7 +135,8 @@ public class EditSegmentDialog extends Dialog {
           titleService.findAll(),
           active,
           byName,
-          expNames);
+          expNames,
+          teams);
     }
   }
 
@@ -292,6 +300,7 @@ public class EditSegmentDialog extends Dialog {
   private final ComboBox<AlignmentType> alignmentFilter;
   private final MultiSelectComboBox<SegmentRule> rulesCombo;
   private final MultiSelectComboBox<Wrestler> winnersCombo;
+  private final HorizontalLayout winnerTeamButtonsLayout = new HorizontalLayout();
   private final TextArea summaryArea;
   private final Checkbox isTitleSegmentCheckbox;
   private final com.vaadin.flow.component.html.Span synergyBonusLabel;
@@ -379,6 +388,10 @@ public class EditSegmentDialog extends Dialog {
     participantsCombo = new MultiSelectComboBox<>();
     participantsCombo.setVisible(false);
 
+    winnerTeamButtonsLayout.setSpacing(true);
+    winnerTeamButtonsLayout.setPadding(false);
+    winnerTeamButtonsLayout.setId("edit-winner-team-buttons-layout");
+
     Runnable refreshWinners =
         () -> {
           Set<Wrestler> allSelected =
@@ -391,6 +404,21 @@ public class EditSegmentDialog extends Dialog {
           winnersCombo.setValue(
               currentWinners.stream().filter(allSelected::contains).collect(Collectors.toSet()));
           updateSynergyBonus(allSelected);
+
+          // Whole-team winner quick-select: one button per team with 2+ members so recording
+          // a tag win doesn't require picking each partner individually in the winners combo.
+          winnerTeamButtonsLayout.removeAll();
+          for (int i = 0; i < teamCombos.size(); i++) {
+            Set<Wrestler> teamWrestlers = teamCombos.get(i).getValue();
+            if (teamWrestlers.size() > 1) {
+              int teamNum = i + 1;
+              Button teamWinsButton = new Button("Team " + teamNum + " Wins");
+              teamWinsButton.addThemeVariants(ButtonVariant.LUMO_SMALL, ButtonVariant.LUMO_SUCCESS);
+              teamWinsButton.setId("edit-team-" + teamNum + "-wins-button");
+              teamWinsButton.addClickListener(e -> winnersCombo.setValue(teamWrestlers));
+              winnerTeamButtonsLayout.add(teamWinsButton);
+            }
+          }
         };
 
     java.util.function.Consumer<Set<Wrestler>> addTeamRow =
@@ -420,6 +448,46 @@ public class EditSegmentDialog extends Dialog {
               });
           teamCombos.add(teamCombo);
 
+          ComboBox<Team> rosterTeamPicker = new ComboBox<>();
+          rosterTeamPicker.setPlaceholder("Quick-pick roster team…");
+          rosterTeamPicker.setClearButtonVisible(true);
+          rosterTeamPicker.setWidthFull();
+          if (!data.teams().isEmpty()) {
+            rosterTeamPicker.setItems(data.teams());
+            Map<Long, Wrestler> activeById =
+                data.activeWrestlers().stream()
+                    .collect(Collectors.toMap(Wrestler::getId, w -> w, (a, b) -> a));
+            rosterTeamPicker.setItemLabelGenerator(
+                t -> {
+                  String name = t.getName();
+                  String members = t.getWrestler1().getName() + " & " + t.getWrestler2().getName();
+                  return name != null && !name.isBlank() ? name + " (" + members + ")" : members;
+                });
+            rosterTeamPicker.addValueChangeListener(
+                e -> {
+                  Team picked = e.getValue();
+                  if (picked != null) {
+                    Set<Wrestler> current = new HashSet<>(teamCombo.getValue());
+                    if (picked.getWrestler1() != null) {
+                      current.add(
+                          activeById.getOrDefault(
+                              picked.getWrestler1().getId(), picked.getWrestler1()));
+                    }
+                    if (picked.getWrestler2() != null) {
+                      current.add(
+                          activeById.getOrDefault(
+                              picked.getWrestler2().getId(), picked.getWrestler2()));
+                    }
+                    List<Wrestler> newItems = getFilteredWrestlers(current);
+                    teamCombo.setItems(newItems);
+                    teamCombo.setValue(current);
+                    rosterTeamPicker.clear();
+                  }
+                });
+          } else {
+            rosterTeamPicker.setVisible(false);
+          }
+
           Button removeTeamButton = new Button(new Icon(VaadinIcon.MINUS));
           removeTeamButton.addThemeVariants(
               ButtonVariant.LUMO_ERROR, ButtonVariant.LUMO_TERTIARY_INLINE);
@@ -428,9 +496,13 @@ public class EditSegmentDialog extends Dialog {
           teamRow.setFlexGrow(1, teamCombo);
           teamRow.setAlignItems(HorizontalLayout.Alignment.END);
           teamRow.setWidthFull();
+          VerticalLayout teamSection = new VerticalLayout(rosterTeamPicker, teamRow);
+          teamSection.setSpacing(false);
+          teamSection.setPadding(false);
+          teamSection.setWidthFull();
           removeTeamButton.addClickListener(
               e -> {
-                teamsLayout.remove(teamRow);
+                teamsLayout.remove(teamSection);
                 teamCombos.remove(teamCombo);
                 for (int i = 0; i < teamCombos.size(); i++) {
                   teamCombos.get(i).setLabel("Team " + (i + 1));
@@ -439,7 +511,7 @@ public class EditSegmentDialog extends Dialog {
                 teamCombos.forEach(c -> allAssignedWrestlers.addAll(c.getValue()));
                 refreshWinners.run();
               });
-          teamsLayout.add(teamRow);
+          teamsLayout.add(teamSection);
           refreshWinners.run();
         };
 
@@ -528,7 +600,7 @@ public class EditSegmentDialog extends Dialog {
               allTeamWrestlers.stream()
                   .filter(w -> w.getAccount() != null)
                   .sorted(Comparator.comparing(Wrestler::getName))
-                  .collect(Collectors.toList());
+                  .toList();
           boolean show = !isPromo && !playerWrestlers.isEmpty();
           healthLayout.setVisible(show);
           if (show) {
@@ -566,6 +638,7 @@ public class EditSegmentDialog extends Dialog {
     }
 
     formLayout.setColspan(healthLayout, 2);
+    formLayout.setColspan(winnerTeamButtonsLayout, 2);
     formLayout.add(
         segmentTypeCombo,
         rulesCombo,
@@ -575,6 +648,7 @@ public class EditSegmentDialog extends Dialog {
         teamsSection,
         synergyBonusLabel,
         winnersCombo,
+        winnerTeamButtonsLayout,
         isTitleSegmentCheckbox,
         titleMultiSelectComboBox,
         summaryArea,
@@ -681,6 +755,7 @@ public class EditSegmentDialog extends Dialog {
             titleService,
             wrestlerService,
             expansionService,
+            null,
             universeId),
         wrestlerService,
         defaultGenderConstraint,
@@ -726,7 +801,7 @@ public class EditSegmentDialog extends Dialog {
           mustInclude.stream()
               .filter(w -> w.getId() != null && !presentIds.contains(w.getId()))
               .sorted(Comparator.comparing(Wrestler::getName))
-              .collect(Collectors.toList());
+              .toList();
       if (!extra.isEmpty()) {
         filtered.addAll(extra);
         filtered.sort(Comparator.comparing(Wrestler::getName));
